-- Add a card in dashboard view for employer which shows logedIn user created internships. (Is Resposive) -- Added view to display single internship for guest. (but need design) -- DashboardStudent -> Stduent get dashboardView with applied Internships [still working.] -- Bit fixed the alignment for registration page.

--- a/wwwroot/css/login.css
+++ b/wwwroot/css/login.css
@@ -214,6 +214,7 @@ a:hover{
 @media screen and (max-width: 1000px){
 	form{
 		width: 290px;
+		margin-right: 55px;
 	}
 
 	.login-content h2{
